tests/golden/errors/set_remove_missing.py
s = {x for x in range(3)}
s.remove(9)
